--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
-.yarn/install-state.gz
-
-# testing
-/coverage
+.next
+.env.local
+.eslintrc.json
+node_modules
 
 # next.js
 /.next/
@@ -16,11 +13,6 @@
 # production
 /build
 
-# misc
-.DS_Store
-*.pem
-
-# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
